effects/fallapart: Avoid animating windows while there's a fullscreen effect

While there's a fullscreen effect, the fall apart effect should avoid
animating windows as it can corrupt or interfere with the active full
screen effect. This matches behavior of many other animation effects in
kwin.

BUG: 449844


(cherry picked from commit e419faee39b23d4b1b9f4359b07d31b5e95e7e6e)